--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EStoreApp"
         tools:targetApi="31">
-        <activity android:name=".ProductDetailActivity"/>
+
+        <!-- Đăng ký LoginActivity làm launcher -->
         <activity
-            android:name=".MainActivity"
+           android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".ProductDetailActivity" />
     </application>
+
 
 </manifest>
