--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EStoreApp"
         tools:targetApi="31">
-        <activity android:name=".ProductDetailActivity"/>
+        <activity android:name=".activities.ProductDetailActivity"/>
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
