--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,7 @@
         tools:targetApi="31">
 
         <activity
-           android:name=".LoginActivity"
-
-        <activity android:name=".activities.ProductDetailActivity"/>
-        <activity
-            android:name=".activities.MainActivity"
+            android:name=".activities.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,9 +23,12 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".ProductDetailActivity" />
+        <activity android:name=".activities.ProductDetailActivity" />
+        <activity android:name=".activities.MainActivity" />
+        <activity android:name=".activities.RegisterActivity" />
+
+
+
     </application>
 
 
