--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,23 @@
         <activity android:name=".activities.ProductDetailActivity" />
         <activity android:name=".activities.MainActivity" />
         <activity android:name=".activities.RegisterActivity" />
+        <activity android:name=".activities.OrderDetailActivity" />
+        <activity android:name=".activities.PaymentResultActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <!-- Deep link URL: estoreapp://payment-return -->
+                <data
+                    android:scheme="estoreapp"
+                    android:host="payment-return" />
+
+            </intent-filter>
+        </activity>
+        <activity android:name=".activities.WebViewActivity" />
 
 
 
