--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,11 +35,11 @@
         <!-- ✅ Thêm MapActivity nếu dùng OpenStreetMap -->
         <activity
             android:name=".activities.MapActivity"
-            android:exported="false" />
+            android:exported="true" />
 
         <!-- Các activity còn lại -->
-        <activity android:name=".activities.ProductDetailActivity" android:exported="false"/>
-        <activity android:name=".activities.RegisterActivity" android:exported="false"/>
+        <activity android:name=".activities.ProductDetailActivity" android:exported="true"/>
+        <activity android:name=".activities.RegisterActivity" android:exported="true"/>
 
     </application>
 </manifest>
